[project]
name = "cld-mmrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
